feat: show TitleDB remote update status in system status modal

--- a/app/templates/modals/status_modal.html
+++ b/app/templates/modals/status_modal.html
@@ -25,6 +25,37 @@
 
             <hr class="dropdown-divider">
 
+            <!-- TitleDB Status -->
+            <div class="mb-5" id="titledbStatusSection">
+                <h5 class="title is-6 mb-3 has-text-weight-bold">
+                    <i class="bi bi-database-check mr-2 has-text-success"></i>
+                    TitleDB Status
+                </h5>
+                <div id="titledbStatusInfo" class="is-size-7">
+                    <div class="columns is-mobile is-multiline mb-0">
+                        <div class="column is-6 py-1">
+                            <span class="has-text-grey">Source:</span>
+                            <span id="tdbSource" class="has-text-weight-semibold">-</span>
+                        </div>
+                        <div class="column is-6 py-1">
+                            <span class="has-text-grey">Loaded File:</span>
+                            <span id="tdbFile" class="has-text-weight-semibold">-</span>
+                        </div>
+                        <div class="column is-6 py-1">
+                            <span class="has-text-grey">Last Download:</span>
+                            <span id="tdbLastDownload" class="has-text-weight-semibold">-</span>
+                        </div>
+                        <div class="column is-6 py-1">
+                            <span class="has-text-grey">Remote (Modified):</span>
+                            <span id="tdbRemoteDate" class="has-text-weight-semibold">-</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <hr class="dropdown-divider">
+
+
             <!-- History -->
             <div class="mt-4">
                 <h5 class="title is-6 mb-3 has-text-weight-bold">
