ui: change 'Last Download' to 'Last Processing' for more accuracy

--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -553,8 +553,8 @@
                                     </div>
                                     <div class="level-item has-text-centered">
                                         <div>
-                                            <p class="heading">{{ t('Last Download') }}</p>
-                                            <p class="title is-5">{{ active_source.last_download_date }}</p>
+                                            <p class="heading">{{ t('Last Processing') }}</p>
+                                            <p class="title is-5">{{ active_source.last_process_date }}</p>
                                         </div>
                                     </div>
                                     <div class="level-item has-text-centered">
