fix: resolve file explorer unknown status and improve settings layout width

--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -4,7 +4,7 @@
 {% include 'nav.html' %}
 
 <section class="section">
-    <div class="container px-5">
+    <div class="container is-fluid px-5">
         <div class="columns is-variable is-8">
 
             <!-- Sidebar Navigation -->
